--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "dev-backend": "nodemon --experimental-modules app.mjs",
+    "backend": "node --experimental-modules app.mjs",
+    "dev-frontend": "",
+    "frontend": ""
   },
   "repository": {
     "type": "git",
