--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-backend": "nodemon --experimental-modules app.mjs",
-    "backend": "node --experimental-modules app.mjs",
+    "dev-backend": "SET NODE_ENV=development&& nodemon --experimental-modules app.mjs",
+    "backend": "SET NODE_ENV=production&& node --experimental-modules app.mjs",
     "dev-frontend": "",
     "frontend": ""
   },
