Use linux env variables (Remove SET instruction)

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET NODE_ENV=development&& nodemon --ignore './frontend' --experimental-modules app.mjs",
-    "production": "SET NODE_ENV=production&& node --experimental-modules app.mjs"
+    "start": "NODE_ENV=development nodemon --ignore './frontend' --experimental-modules app.mjs",
+    "production": "NODE_ENV=production node --experimental-modules app.mjs"
   },
   "repository": {
     "type": "git",
